# Mosti

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  run_tests.sh
.github/workflows/: main.yml
env/: Dockerfile
include/Mosti/: emulator.h
src/: CMakeLists.txt
src/emulator/: addressing.cpp  addressing.h  emulator.cpp  instruction_config.h
test/: CMakeLists.txt  mosti_test.cpp
